ingress-nginx/k8s/sampleapp-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      containers:
        - name: sampleapp
          image: kryz81/sampleapp:2
          ports:
            - containerPort: 5000
