ingress-nginx/k8s/sampleapp2-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp2
  template:
    metadata:
      labels:
        app: sampleapp2
    spec:
      containers:
        - name: sampleapp2
          image: kryz81/sampleapp:2
          ports:
            - containerPort: 5000
