ingress-nginx/k8s/sampleapp-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp-srv
spec:
  type: ClusterIP
  selector:
    app: sampleapp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
