ingress-nginx/k8s/sampleapp2-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp2-srv
spec:
  type: ClusterIP
  selector:
    app: sampleapp2
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
