ingress-nginx/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: sampleapp-srv
                port:
                  number: 5000
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: sampleapp2-srv
                port:
                  number: 5000
